# gecko

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: deploy-wasm.yml  release.yml
crates/backend-wgpu/: Cargo.toml
crates/backend-wgpu/src/: action.rs  capture.rs  clear.rs  gx.wgsl  helpers.rs  lib.rs  pipeline.rs  render.rs  renderdoc_capture.rs  shader_specialization.rs  sink.rs  texture.rs  triangulate.rs
crates/dbglib/: Cargo.toml
crates/dbglib/src/: lib.rs  trace.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: debugger.rs  main.rs  render.rs  windows.rs  xfb.wgsl
crates/disasm/: Cargo.toml
crates/disasm/src/: tokenizer.rs
crates/dspemu/: Cargo.toml
crates/dspemu/src/: main.rs
crates/gctool/src/: dol.rs  iso.rs  main.rs
crates/gecko/: Cargo.toml  build.rs  chipi.toml  dsp_jit.bindings.chipi  gekko.bindings.chipi  wii_dsp.bindings.chipi
crates/gecko/src/: cpu.rs  dvd.rs  gamecube.rs  gekko.rs  (+12 more)
crates/gekko/: Cargo.toml  build.rs
crates/image/: Cargo.toml
crates/scripting/: Cargo.toml
crates/tinyapp/: Cargo.toml
crates/tinybench/: Cargo.toml
crates/tinyemu/: Cargo.toml
crates/tinytracer/: Cargo.toml
crates/web/: Cargo.toml  index.html
crates/web/src/: debug_ui.rs  lib.rs  thread_pool.rs  thread_worker_helpers.js
gctool/: Cargo.toml  build.rs
gctool/src/: cpu.rs  main.rs
other/: build_index.py  game_index.txt  game_index_wii.txt  gamelist.txt  gamelist_test.txt
rsrc/roms/: panda.dol.i64
scripts/: dsp_busy_toggle.lua  hazel.lua  sms_print_log.lua
(+174 files in other folders)
