[package]
name = "dspemu"
version = "0.1.0"
edition = "2024"

[features]
idle-skip = ["gecko/idle-skip"]

[dependencies]
gecko = { path = "../gecko" }
disasm = { path = "../disasm" }
clap = { version = "4.6.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
